chore: touch coming-soon to force rebuild (timestamp)

--- a/project-root/coming-soon.html
+++ b/project-root/coming-soon.html
@@ -19,6 +19,8 @@
     <img src="images/logo.png" alt="logo">
     <h1>Independent Lighting Controls Consulting &amp; Training</h1>
     <p class="sub">From Rough-In to Commissioning &amp; Controls Without Callbacks</p>
+    <!-- Updated to force rebuild -->
+    <p class="sub"><em>Updated 2026-01-03 03:15 UTC</em></p>
   </div>
 </body>
 </html>
