Fix background image - rename to remove spaces

--- a/project-root/coming-soon.html
+++ b/project-root/coming-soon.html
@@ -13,7 +13,7 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      background-image: url('images/Coming%20Soon%20Back%20Ground.jpg');
+      background-image: url('images/coming-soon-bg.jpg');
       background-size: cover;
       background-position: center;
       background-attachment: fixed;
