--- a/project-root/coming-soon.html
+++ b/project-root/coming-soon.html
@@ -13,7 +13,7 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      background-image: url('images/coming-soon-bg.jpg');
+      background-image: url('./coming-soon-bg.jpg');
       background-size: cover;
       background-position: center;
       background-attachment: fixed;
@@ -65,7 +65,7 @@
 </head>
 <body>
   <div class="card">
-    <img src="images/logo.png" alt="NCC logo">
+    <img src="./logo.ba3edf2d.png" alt="NCC logo">
     <h1>Independent Lighting Controls Consulting &amp; Training</h1>
     <p class="sub">From Rough-In to Commissioning &amp; Controls Without Callbacks</p>
   </div>
