Quadruple logo size and add Coming Soon text

--- a/project-root/coming-soon.html
+++ b/project-root/coming-soon.html
@@ -42,8 +42,8 @@
       backdrop-filter: blur(10px);
     }
     .card img {
-      width: 300px;
-      height: 300px;
+      width: 1200px;
+      height: 1200px;
       object-fit: contain;
       margin-bottom: 2rem;
     }
@@ -52,6 +52,11 @@
       margin-bottom: 1rem;
       margin-top: 0;
       font-weight: bold;
+    }
+    .coming-soon-text {
+      font-size: 3rem;
+      font-weight: bold;
+      margin: 1rem 0;
     }
     p {
       font-size: 1.2rem;
@@ -66,6 +71,7 @@
 <body>
   <div class="card">
     <img src="./logo.ba3edf2d.png" alt="NCC logo">
+    <div class="coming-soon-text">Coming Soon</div>
     <h1>Independent Lighting Controls Consulting &amp; Training</h1>
     <p class="sub">From Rough-In to Commissioning &amp; Controls Without Callbacks</p>
   </div>
