Reduce logo to 1000px wide and keep proportional

--- a/project-root/coming-soon.html
+++ b/project-root/coming-soon.html
@@ -42,8 +42,8 @@
       backdrop-filter: blur(10px);
     }
     .card img {
-      width: 2400px;
-      height: 2400px;
+      width: 1000px;
+      height: auto;
       object-fit: contain;
       margin-bottom: 2rem;
     }
