--- a/project-root/coming-soon.html
+++ b/project-root/coming-soon.html
@@ -46,6 +46,7 @@
       height: auto;
       object-fit: contain;
       margin-bottom: 2rem;
+      margin-left: 60px;
     }
     h1 {
       font-size: 2.5rem;
