--- a/project-root/coming-soon.html
+++ b/project-root/coming-soon.html
@@ -46,7 +46,9 @@
       height: auto;
       object-fit: contain;
       margin-bottom: 2rem;
-      margin-left: 60px;
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
     }
     h1 {
       font-size: 2.5rem;
