--- a/project-root/coming-soon.html
+++ b/project-root/coming-soon.html
@@ -36,19 +36,18 @@
       padding: 3rem;
       border-radius: 12px;
       background: rgba(0, 0, 0, 0.5);
-      max-width: 900px;
+      max-width: 1100px;
+      width: 90%;
       position: relative;
       z-index: 2;
       backdrop-filter: blur(10px);
     }
     .card img {
-      width: 1000px;
+      width: 100%;
+      max-width: 1000px;
       height: auto;
       object-fit: contain;
       margin-bottom: 2rem;
-      display: block;
-      margin-left: auto;
-      margin-right: auto;
     }
     h1 {
       font-size: 2.5rem;
