--- a/project-root/coming-soon.html
+++ b/project-root/coming-soon.html
@@ -47,7 +47,18 @@
       max-width: 1000px;
       height: auto;
       object-fit: contain;
-      margin-bottom: 2rem;
+      margin-bottom: 1rem;
+    }
+    .company-name {
+      font-size: 2.8rem;
+      font-weight: bold;
+      margin: 0.5rem 0 2rem 0;
+      background: linear-gradient(180deg, #f5f5f5 0%, #b8b8b8 50%, #8a8a8a 100%);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      background-clip: text;
+      text-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
+      letter-spacing: 2px;
     }
     h1 {
       font-size: 2.5rem;
@@ -72,8 +83,7 @@
 </head>
 <body>
   <div class="card">
-    <img src="./logo.ba3edf2d.png" alt="NCC logo">
-    <div class="coming-soon-text">Coming Soon</div>
+    <img src="./logo.ba3edf2d.png" alt="NCC logo">    <div class="company-name">National Controls Consulting</div>    <div class="coming-soon-text">Coming Soon</div>
     <h1>Independent Lighting Controls Consulting &amp; Training</h1>
     <p class="sub">From Rough-In to Commissioning &amp; Controls Without Callbacks</p>
   </div>
