--- a/project-root/coming-soon.html
+++ b/project-root/coming-soon.html
@@ -47,12 +47,12 @@
       max-width: 1000px;
       height: auto;
       object-fit: contain;
-      margin-bottom: 1rem;
+      margin-bottom: 40px;
     }
     .company-name {
       font-size: 2.8rem;
       font-weight: bold;
-      margin: 0.5rem 0 2rem 0;
+      margin: 0 0 2rem 0;
       background: linear-gradient(180deg, #f5f5f5 0%, #b8b8b8 50%, #8a8a8a 100%);
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
