--- a/project-root/coming-soon.html
+++ b/project-root/coming-soon.html
@@ -52,7 +52,7 @@
     .company-name {
       font-size: 2.8rem;
       font-weight: bold;
-      margin: 0 0 2rem 0;
+      margin: -250px 0 2rem 0;
       background: linear-gradient(180deg, #f5f5f5 0%, #b8b8b8 50%, #8a8a8a 100%);
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
