Fix logo display - use correct hashed filename

--- a/project-root/coming-soon.html
+++ b/project-root/coming-soon.html
@@ -107,7 +107,7 @@
 </head>
 <body>
   <div class="card">
-    <img src="./images/logo.png" alt="NCC logo">
+    <img src="./logo.4ab7e37c.png" alt="NCC logo">
     <div class="company-name">National Controls Consulting</div>    <div class="coming-soon-text">Coming Soon</div>
     <h1>Independent Lighting Controls Consulting &amp; Training</h1>
     <p class="sub">From Rough-In to Commissioning &amp; Controls Without Callbacks</p>
