Add reply-to for contact form

--- a/project-root/index.html
+++ b/project-root/index.html
@@ -78,6 +78,7 @@
             <input type="hidden" name="subject" value="New Contact Form Submission - NCC Website">
             <input type="hidden" name="from_name" value="NCC Contact Form">
             <input type="hidden" name="redirect" value="https://nationalcontrolsconsulting.com/?success=true">
+            <input type="hidden" name="replyto" value="William@nationalcontrolsconsulting.com">
             <input type="text" name="name" placeholder="Your Name" required>
             <input type="email" name="email" placeholder="Your Email" required>
             <input type="text" name="company" placeholder="Company (Optional)">
