Implement UX improvements: clearer value prop, prominent CTAs, new Remote Services, enhanced footer and Schedule Training button

--- a/project-root/index.html
+++ b/project-root/index.html
@@ -20,9 +20,15 @@
             </ul>
         </nav>
         <div class="hero-content">
-            <h1>Independent Lighting Controls Consulting & Training</h1>
-            <p>Helping electricians and contractors install, troubleshoot, and commission commercial lighting systems correctly the first time.</p>
-            <a href="#contact" class="cta-btn">Book a Consultation</a>
+            <h1>We Fix Lighting Control Problems on Commercial Projects — Fast</h1>
+            <p>Troubleshooting, training & on-site consulting to keep your jobs on schedule and avoid costly rework.</p>
+            <div class="hero-cta-section">
+                <a href="tel:+1234567890" class="phone-number">📞 Call Now: (123) 456-7890</a>
+                <div class="cta-buttons">
+                    <a href="#contact" class="cta-btn primary">Get a Free Quote</a>
+                    <a href="#contact" class="cta-btn secondary">Schedule a Call</a>
+                </div>
+            </div>
         </div>
     </header>
 
@@ -45,6 +51,10 @@
             <div class="card">
                 <h3>Electrician Training</h3>
                 <p>Hands-on courses to teach crews the practical skills needed to avoid lighting control issues.</p>
+            </div>
+            <div class="card">
+                <h3>Remote Services</h3>
+                <p>Plan review, Title 24 consultations, remote site walkthroughs, and coordination services to support your projects from anywhere.</p>
             </div>
             <div class="card">
                 <h3>Project Retainers</h3>
@@ -85,28 +95,11 @@
 
     <!-- FOOTER -->
     <footer>
+        <img src="images/logo.png" alt="National Controls Consulting Logo" class="footer-logo">
         <p>&copy; 2026 National Controls Consulting | All rights reserved</p>
     </footer>
 
     <script src="script.js"></script>
 </body>
 </html>
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>National Control Consulting</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <header>
-    <img src="images/logo.png" alt="Logo" id="logo">
-    <h1>National Control Consulting</h1>
-  </header>
-  <main>
-    <p>Welcome to the project root. This is a minimal starter site.</p>
-  </main>
-  <script src="script.js"></script>
-</body>
-</html>
+
