--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html lang=en><meta charset=UTF-8><meta name=viewport content="width=device-width, initial-scale=1.0"><title>National Controls Consulting</title><link rel=stylesheet href=project-root.e7c92e58.css><link rel=icon href=logo.4ab7e37c.png><body>
+<!DOCTYPE html><html lang=en><meta charset=UTF-8><meta name=viewport content="width=device-width, initial-scale=1.0"><title>National Controls Consulting</title><link rel=stylesheet href=project-root.7ab045d6.css><link rel=icon href=logo.4ab7e37c.png><body>
     
     <header class=hero>
         <nav class=navbar>
@@ -11,9 +11,15 @@
             </ul>
         </nav>
         <div class=hero-content>
-            <h1>Independent Lighting Controls Consulting &amp; Training</h1>
-            <p>Helping electricians and contractors install, troubleshoot, and commission commercial lighting systems correctly the first time.</p>
-            <a href=#contact class=cta-btn>Book a Consultation</a>
+            <h1>We Fix Lighting Control Problems on Commercial Projects — Fast</h1>
+            <p>Troubleshooting, training &amp; on-site consulting to keep your jobs on schedule and avoid costly rework.</p>
+            <div class=hero-cta-section>
+                <a href=tel:+1234567890 class=phone-number>📞 Call Now: (123) 456-7890</a>
+                <div class=cta-buttons>
+                    <a href=#contact class="cta-btn primary">Get a Free Quote</a>
+                    <a href=#contact class="cta-btn secondary">Schedule a Call</a>
+                </div>
+            </div>
         </div>
     </header>
 
@@ -36,6 +42,10 @@
             <div class=card>
                 <h3>Electrician Training</h3>
                 <p>Hands-on courses to teach crews the practical skills needed to avoid lighting control issues.</p>
+            </div>
+            <div class=card>
+                <h3>Remote Services</h3>
+                <p>Plan review, Title 24 consultations, remote site walkthroughs, and coordination services to support your projects from anywhere.</p>
             </div>
             <div class=card>
                 <h3>Project Retainers</h3>
@@ -65,6 +75,7 @@
             <p>✓ Thank you! Your message has been sent. We'll be in touch soon.</p>
         </div>
         <form id=contactForm action=/api/contact method=post>
+            <input type=hidden name=botcheck value>
             <input name=name placeholder="Your Name" required>
             <input type=email name=email placeholder="Your Email" required>
             <input name=company placeholder="Company (Optional)">
@@ -75,28 +86,11 @@
 
     
     <footer>
+        <img src=logo.4ab7e37c.png alt="National Controls Consulting Logo" class=footer-logo>
         <p>© 2026 National Controls Consulting | All rights reserved</p>
     </footer>
 
     <script src=project-root.2df4fc45.js></script>
 
-
-
-
-
-  <meta charset=utf-8>
-  <meta name=viewport content="width=device-width,initial-scale=1">
-  <title>National Control Consulting</title>
-  <link rel=stylesheet href=project-root.e7c92e58.css>
-
-
-  <header>
-    <img src=logo.4ab7e37c.png alt=Logo id=logo>
-    <h1>National Control Consulting</h1>
-  </header>
-  <main>
-    <p>Welcome to the project root. This is a minimal starter site.</p>
-  </main>
-  <script src=project-root.2df4fc45.js></script>
 
 
