Add multi-page architecture: Services, Experience, Process, Contact pages with complete CSS styling and visibility fixes

--- a/project-root/index.html
+++ b/project-root/index.html
@@ -13,10 +13,11 @@
         <nav class="navbar">
             <img src="images/logo.png" alt="National Controls Consulting Logo" class="logo">
             <ul class="nav-links">
-                <li><a href="#about">About</a></li>
-                <li><a href="#services">Services</a></li>
-                <li><a href="#training">Training</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="services.html">Services</a></li>
+                <li><a href="experience.html">Experience</a></li>
+                <li><a href="process.html">Process</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
         <div class="hero-content">
@@ -25,8 +26,8 @@
             <div class="hero-cta-section">
                 <a href="tel:+1234567890" class="phone-number">📞 Call Now: (123) 456-7890</a>
                 <div class="cta-buttons">
-                    <a href="#contact" class="cta-btn primary">Get a Free Quote</a>
-                    <a href="#contact" class="cta-btn secondary">Schedule a Call</a>
+                    <a href="contact.html" class="cta-btn primary">Get a Free Quote</a>
+                    <a href="contact.html" class="cta-btn secondary">Schedule a Call</a>
                 </div>
             </div>
         </div>
@@ -65,7 +66,7 @@
 
     <!-- TRAINING -->
     <section id="training" class="section training-section">
-        <a href="#contact" class="cta-btn">Schedule Training</a>
+        <a href="contact.html" class="cta-btn">Schedule Training</a>
         <h2>Training Programs</h2>
         <p>Our training programs cover:</p>
         <ul class="training-list">
