--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,14 @@
-<!DOCTYPE html><html lang=en><meta charset=UTF-8><meta name=viewport content="width=device-width, initial-scale=1.0"><title>National Controls Consulting</title><link rel=stylesheet href=project-root.3ca5004e.css><link rel=icon href=logo.4ab7e37c.png><body>
+<!DOCTYPE html><html lang=en><meta charset=UTF-8><meta name=viewport content="width=device-width, initial-scale=1.0"><title>National Controls Consulting</title><link rel=stylesheet href=project-root.8ec04ba9.css><link rel=icon href=logo.4ab7e37c.png><body>
     
     <header class=hero>
         <nav class=navbar>
             <img src=logo.4ab7e37c.png alt="National Controls Consulting Logo" class=logo>
             <ul class=nav-links>
-                <li><a href=#about>About</a></li>
-                <li><a href=#services>Services</a></li>
-                <li><a href=#training>Training</a></li>
-                <li><a href=#contact>Contact</a></li>
+                <li><a href=index.html>Home</a></li>
+                <li><a href=services.html>Services</a></li>
+                <li><a href=experience.html>Experience</a></li>
+                <li><a href=process.html>Process</a></li>
+                <li><a href=contact.html>Contact</a></li>
             </ul>
         </nav>
         <div class=hero-content>
@@ -16,8 +17,8 @@
             <div class=hero-cta-section>
                 <a href=tel:+1234567890 class=phone-number>📞 Call Now: (123) 456-7890</a>
                 <div class=cta-buttons>
-                    <a href=#contact class="cta-btn primary">Get a Free Quote</a>
-                    <a href=#contact class="cta-btn secondary">Schedule a Call</a>
+                    <a href=contact.html class="cta-btn primary">Get a Free Quote</a>
+                    <a href=contact.html class="cta-btn secondary">Schedule a Call</a>
                 </div>
             </div>
         </div>
@@ -56,7 +57,7 @@
 
     
     <section id=training class="section training-section">
-        <a href=#contact class=cta-btn>Schedule Training</a>
+        <a href=contact.html class=cta-btn>Schedule Training</a>
         <h2>Training Programs</h2>
         <p>Our training programs cover:</p>
         <ul class=training-list>
