Add expanded troubleshooting scenarios to Services page

--- a/project-root/services.html
+++ b/project-root/services.html
@@ -39,6 +39,12 @@
                 <li>Zones not turning on/off as programmed</li>
                 <li>Intermittent failures or "ghost" issues</li>
                 <li>Title 24 compliance testing failures</li>
+                <li>Flickering lights</li>
+                <li>Crossed zones</li>
+                <li>Wireless communication loss</li>
+                <li>Wired communication loss</li>
+                <li>Lights are dim and won't respond</li>
+                <li>Lights are full bright and won't respond</li>
             </ul>
             <p><strong>Outcome:</strong> Clear root cause identification and step-by-step fixes to get the system operational.</p>
         </section>
